--- a/apache/apache.conf
+++ b/apache/apache.conf
@@ -19,7 +19,7 @@
         Alias /favicon.ico /var/www/holmnet/www/static/favicon.ico
         Alias /media/ /var/www/holmnet/www/media/
         Alias /static/ /var/www/holmnet/www/static/
-        #Alias /pictures/ /data/Photos/
+        Alias /photo/pictures/ /data/Photos/
 
         <Directory /var/www/holmnet/www/static>
             Require all granted
@@ -71,7 +71,7 @@
         Alias /favicon.ico /var/www/holmnet/www/static/favicon.ico
         Alias /media/ /var/www/holmnet/www/media/
         Alias /static/ /var/www/holmnet/www/static/
-        #Alias /pictures/ /data/Photos/
+        Alias /photo/pictures/ /data/Photos/
         
         <Directory /var/www/holmnet/www/static>
             Require all granted
